# image-processor

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: bmp_header.h  image.h  io_status.h  parse.h  pixel.h  process.h  rotator.h  sepia.h  validator.h
src/: bmp_header.c  compare.c  image.c  main.c  parse.c  process.c  rotator.c  sepia.c  sepia_asm.asm  validator.c
